--- a/index.html
+++ b/index.html
@@ -32,40 +32,35 @@
 
     <!--Enlaces Relativos-->
     <!--Lista desordenada-->
-    <nav class="navbar navbar-expand-lg navbar navbar-dark" ;>
+    <nav class="navbar navbar-expand-md navbar navbar-dark"">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./imagenes/Logo-Twenty-one-kebab-case.png"
-                    class="Logo-Twenty-one" alt="Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+                class="Logo-Twenty-one" alt="Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"
-                            href="./pages/casino.html"><span>Casino</span></a>
+                        <a class="nav-link" aria-current="page" href="./pages/casino.html"><span>Casino</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/deportes.html"> <span>Deportes</span></a>
+                        <a class="nav-link" href="./pages/deportes.html"><span>Deportes</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/informacion.html"> <span>Informacion</span></a>
+                        <a class="nav-link" href="./pages/informacion.html"><span>Informacion</span></a>
                     </li>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./pages/promociones.html"><span>Promociones</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./pages/registrate.html"><span>Registrate</span></a>
-                            </li>
-                    </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/promociones.html"><span>Promociones</span></a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/registrate.html"><span>Registrate</span></a>
+                    </li>
+                </ul>
             </div>
+        </div>
     </nav>
-    </div>
 
     <!--Inicio del Header-->
     <!--selector id y de clase-->
