--- a/pages/casino.html
+++ b/pages/casino.html
@@ -33,39 +33,35 @@
     <!--Lista desordenada-->
     <!--Enlaces Relativos-->
     <!--Lista desordenada-->
-    <nav class="navbar navbar-expand-md navbar navbar-dark" ;>
+    <nav class="navbar navbar-expand-md navbar navbar-dark"">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
-                    class="Logo-Twenty-one" alt="Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+                class="Logo-Twenty-one" alt="Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"><span>Casino</span></a>
+                        <a class="nav-link" aria-current="page" href="#"><span>Casino</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./deportes.html"> <span>Deportes</span></a>
+                        <a class="nav-link" href="./deportes.html"><span>Deportes</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./informacion.html"> <span>Informacion</span></a>
+                        <a class="nav-link" href="./informacion.html"><span>Informacion</span></a>
                     </li>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./promociones.html"><span>Promociones</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
-                            </li>
-                    </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./promociones.html"><span>Promociones</span></a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
+                    </li>
+                </ul>
             </div>
+        </div>
     </nav>
-    </div>
 
 
 
@@ -215,20 +211,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="Ayuda-Casino">
-
-                                <img class="Ayuda-Logo" src="../imagenes/logo-lineagratuita-kebab-case.png"
-                                    alt="Logo-Ayuda">
+                <div class="Ayuda-Casino">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                <img class="Ayuda-Logo" src="../imagenes/logo-lineagratuita-kebab-case.png" alt="Logo-Ayuda">
+                            </div>
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                 <img class="Ayuda-Logo2" src="../imagenes/Logo-Ayuda-kebab-case.png" alt="Logo-Ayuda">
-                                <img class="Ayuda-Logo3" src="../imagenes/logo-autoexcluyete-kebab-case.png"
-                                    alt="Logo-Ayuda">
+                            </div>
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                <img class="Ayuda-Logo3" src="../imagenes/logo-autoexcluyete-kebab-case.png" alt="Logo-Ayuda">
                             </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
