--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -29,53 +29,37 @@
 <body>
     <!--Inicio del Nav-->
     <!--Enlaces Relativos-->
-    <nav class="navbar navbar-expand-sm navbar navbar-dark" ;>
+    
+    <nav class="navbar navbar-expand-md navbar navbar-dark"">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
-                    class="Logo-Twenty-one" alt="Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+                class="Logo-Twenty-one" alt="Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"
-                            href="../pages/casino.html"><span>Casino</span></a>
+                        <a class="nav-link" aria-current="page" href="./casino.html"><span>Casino</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./deportes.html"> <span>Deportes</span></a>
+                        <a class="nav-link" href="./deportes.html"><span>Deportes</span></a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <span>Informacion</span></a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/grupo.png" class="Logo-b"
-                                        alt="Sobre nosotros"> Sobre Nosotros</a></li>
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/link.png" class="Logo-b"
-                                        alt="Link"> Links Destacados</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#"> <img src="../imagenes/apoyo.png" class="Logo-b"
-                                        alt="Apoyo"> Ayuda al consumidor</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span>Informacion</span></a>
                     </li>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./promociones.html"><span>Promociones</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
-                            </li>
-                    </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./promociones.html"><span>Promociones</span></a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
+                    </li>
+                </ul>
             </div>
+        </div>
     </nav>
-    </div>
+        
     <header class="Header-Info">
         <h1>Mantenete informado con Twenty-one</h1>
     </header>
