--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -30,32 +30,32 @@
     <!--Inicio del Nav-->
     <!--Enlaces Relativos-->
     <nav class="navbar navbar-expand-md navbar navbar-dark"">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
+        <div class=" container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
                 class="Logo-Twenty-one" alt="Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./casino.html"><span>Casino</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./deportes.html"><span>Deportes</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./informacion.html"><span>Informacion</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./promociones.html"><span>Promociones</span></a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><span>Registrate</span></a>
-                    </li>
-                </ul>
-            </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./casino.html"><span>Casino</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./deportes.html"><span>Deportes</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./informacion.html"><span>Informacion</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./promociones.html"><span>Promociones</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><span>Registrate</span></a>
+                </li>
+            </ul>
+        </div>
         </div>
     </nav>
 
@@ -161,7 +161,7 @@
                                 <h3>Estaremos en la Formula 1!</h3>
                                 <p>
                                     Ahora seremos patrocinadores oficiales de la scuderia Red-Bull,<br>
-                                    les daremos alas para que sean los mejores
+                                    les daremos alas para que sean los mejores.
                                 </p>
                             </div>
                             <div data-aos="zoom-out-down">
@@ -259,12 +259,12 @@
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
                             <div class="Ultimo">
                                 <h5>SEGUINOS EN<br>NUESTRAS REDES</h5>
-                                <div class="Redes">
-                                    <a href="https://www.facebook.com/tomas.duran.5203"><i class="fa-brands fa-facebook"></i></a>
-                                    <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="https://www.tiktok.com/en"><i class="fa-brands fa-tiktok"></i></a>
-                                    <a href="https://github.com/tomas-spec/Twentyone"><i class="fa-brands fa-github"></i></a>
-                                </div>
+                                <a href="https://www.facebook.com/tomas.duran.5203">
+                                    <img class="Imagen-Footer" src="../imagenes/facebook.png" alt="facebook"></a>
+                                <a href="https://www.instagram.com/tomas_duran/">
+                                    <img class="Imagen-Footer" src="../imagenes/instagram.png" alt="Instagram"></a>
+                                <a href="https://www.tiktok.com/en">
+                                    <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png" alt="Tik-tok"></a>
                             </div>
                         </div>
                     </div>
