--- a/pages/casino.html
+++ b/pages/casino.html
@@ -34,32 +34,32 @@
     <!--Enlaces Relativos-->
     <!--Lista desordenada-->
     <nav class="navbar navbar-expand-md navbar navbar-dark"">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
+        <div class=" container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
                 class="Logo-Twenty-one" alt="Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#"><span>Casino</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./deportes.html"><span>Deportes</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./informacion.html"><span>Informacion</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./promociones.html"><span>Promociones</span></a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
-                    </li>
-                </ul>
-            </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#"><span>Casino</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./deportes.html"><span>Deportes</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./informacion.html"><span>Informacion</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./promociones.html"><span>Promociones</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
+                </li>
+            </ul>
+        </div>
         </div>
     </nav>
 
@@ -215,13 +215,15 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                <img class="Ayuda-Logo" src="../imagenes/logo-lineagratuita-kebab-case.png" alt="Logo-Ayuda">
+                                <img class="Ayuda-Logo" src="../imagenes/logo-lineagratuita-kebab-case.png"
+                                    alt="Logo-Ayuda">
                             </div>
                             <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                 <img class="Ayuda-Logo2" src="../imagenes/Logo-Ayuda-kebab-case.png" alt="Logo-Ayuda">
                             </div>
                             <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                <img class="Ayuda-Logo3" src="../imagenes/logo-autoexcluyete-kebab-case.png" alt="Logo-Ayuda">
+                                <img class="Ayuda-Logo3" src="../imagenes/logo-autoexcluyete-kebab-case.png"
+                                    alt="Logo-Ayuda">
                             </div>
                         </div>
                     </div>
@@ -288,14 +290,16 @@
                             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                                 <div class="Ultimo">
                                     <h5>SEGUINOS EN<br>NUESTRAS REDES</h5>
-                                    <div class="Redes">
-                                        <a href="https://www.facebook.com/tomas.duran.5203"><i class="fa-brands fa-facebook"></i></a>
-                                        <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
-                                        <a href="https://www.tiktok.com/en"><i class="fa-brands fa-tiktok"></i></a>
-                                        <a href="https://github.com/tomas-spec/Twentyone"><i class="fa-brands fa-github"></i></a>
-                                    </div>
+                                    <a href="https://www.facebook.com/tomas.duran.5203">
+                                        <img class="Imagen-Footer" src="../imagenes/facebook.png" alt="facebook"></a>
+                                    <a href="https://www.instagram.com/tomas_duran/">
+                                        <img class="Imagen-Footer" src="../imagenes/instagram.png" alt="Instagram"></a>
+                                    <a href="https://www.tiktok.com/en">
+                                        <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png" alt="Tik-tok"></a>
                                 </div>
                             </div>
+                        </div>
+                    </div>
                 </footer>
                 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
                 <script>
