--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -29,37 +29,37 @@
 <body>
     <!--Inicio del Nav-->
     <!--Enlaces Relativos-->
-    
+
     <nav class="navbar navbar-expand-md navbar navbar-dark"">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
+        <div class=" container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/Logo-Twenty-one-kebab-case.png"
                 class="Logo-Twenty-one" alt="Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./casino.html"><span>Casino</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./deportes.html"><span>Deportes</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><span>Informacion</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./promociones.html"><span>Promociones</span></a>
-                    </li> 
-                    <li class="nav-item">
-                        <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
-                    </li>
-                </ul>
-            </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./casino.html"><span>Casino</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./deportes.html"><span>Deportes</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><span>Informacion</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./promociones.html"><span>Promociones</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./registrate.html"><span>Registrate</span></a>
+                </li>
+            </ul>
+        </div>
         </div>
     </nav>
-        
+
     <header class="Header-Info">
         <h1>Mantenete informado con Twenty-one</h1>
     </header>
@@ -175,12 +175,12 @@
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <div class="Ultimo">
                         <h4>SEGUINOS EN<br>NUESTRAS REDES</h4>
-                        <div class="Redes">
-                            <a href="https://www.facebook.com/tomas.duran.5203"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
-                            <a href="https://www.tiktok.com/en"><i class="fa-brands fa-tiktok"></i></a>
-                            <a href="https://github.com/tomas-spec/Twentyone"><i class="fa-brands fa-github"></i></a>
-                        </div>
+                        <a href="https://www.facebook.com/tomas.duran.5203">
+                            <img class="Imagen-Footer" src="../imagenes/facebook.png" alt="facebook"></a>
+                        <a href="https://www.instagram.com/tomas_duran/">
+                            <img class="Imagen-Footer" src="../imagenes/instagram.png" alt="Instagram"></a>
+                        <a href="https://www.tiktok.com/en">
+                            <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png" alt="Tik-tok"></a>
                     </div>
                 </div>
             </div>
