Terminando el proyecto final

--- a/index.html
+++ b/index.html
@@ -508,6 +508,81 @@
                     Pucara <span>3.0</span> vs Belgrano Rugby Club <span>2.0</span>
                 </td>
             </tr>
+            <th>Serie A ⚽️</th>
+            <tr>
+                <td>
+                    Sassuolo <span>2.12</span> vs Spezia <span>3.0</span>
+                </td>
+            </tr>
+            <th>Super Lig ⚽️</th>
+            <tr>
+                <td>
+                    Konyaspor <span>15.0</span> vs Galatasaray <span>3.0</span>
+                </td>
+            </tr>
+            <th>Cyta Championship ⚽️</th>
+            <tr>
+                <td>
+                    Apoel Nicosia <span>1.0</span> vs Pafos FC <span>2.6</span>
+                </td>
+            </tr>
+            <th>Boxeo 🥊</th>
+            <tr>
+                <td>
+                    Ryan Garcia <span>10.4</span> vs Floyd Maywether <span>4.0</span>
+                </td>
+            </tr>
+            <th>Premier League ⚽️</th>
+            <tr>
+                <td>
+                    Chelsea <span>4.0</span> vs Liverpool <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Manchester City <span>1.0</span> vs Leeds <span>6.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Newcastle <span>4.0</span> vs Hull City <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Reading <span>7.0</span> vs Brighton <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Wigan <span>9.0</span> vs Aston Villa <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Fulham <span>2.0</span> vs Southampton <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Forest <span>4.0</span> vs Brentford <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Arsenal <span>4.0</span> vs Leicester City <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    West Ham <span>4.0</span> vs Everton <span>2.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Wolves <span>4.0</span> vs Tottenham <span>2.0</span>
+                </td>
+            </tr>
         </table>
     </div>
 
