--- a/pages/casino.html
+++ b/pages/casino.html
@@ -295,7 +295,8 @@
                                     <a href="https://www.instagram.com/tomas_duran/">
                                         <img class="Imagen-Footer" src="../imagenes/instagram.png" alt="Instagram"></a>
                                     <a href="https://www.tiktok.com/en">
-                                        <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png" alt="Tik-tok"></a>
+                                        <img class="Imagen-Footer" src="../imagenes/tik-tok-kebab-case.png"
+                                            alt="Tik-tok"></a>
                                 </div>
                             </div>
                         </div>
