--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -118,7 +118,7 @@
                     <img src="../imagenes/barcelona-vs-real-madrid-prediction-kebab-case.jpg" class="img-fluid"
                         alt="Basquetball">
                     <div class="card-body">
-                        <h3 class="card-title">LIGA DE ESPAÑA⚽️</h3>
+                        <h3 class="card-title">Liga de España⚽️</h3>
                         <p class="card-text">
                             <span>Segui de cerca toda la informacion del clasico para este domingo<br> entre
                                 Barcelona y
