--- a/pages/casino.html
+++ b/pages/casino.html
@@ -96,7 +96,7 @@
                         <a href="#">
                             <img class="Img-Casino" src="../imagenes/Poker.jpg" alt="Poker">
                         </a>
-                        <button class="Button">Ver mas</button>
+                        <button id="btnPrincipal">Ver mas</button>
                     </div>
                 </div>
             </div>
@@ -310,7 +310,7 @@
                     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
                     crossorigin="anonymous"></script>
                     
-                    
+                <script src="../js/main.js"></script>   
 </body>
 
 </html>
