--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!--Aos-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Toastify-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="./css/style.css">
     <title>Twenty-one</title>
@@ -359,35 +361,35 @@
 
             <th>Liga Argentina⚽️</th>
             <tr>
-                <td>
+                <td id="1er-Partido">
                     Godoy Cruz <span>3.0</span> vs Atletico Tucuman <span>4.0</span>
                 </td>
             </tr>
             <tr>
-                <td>Instituto <span>2.0</span>vs Belgrano <span>3.0</span></td>
+                <td id="2do-Partido">Instituto <span>2.0</span>vs Belgrano <span>3.0</span></td>
             </tr>
             <tr>
-                <td>Lanus <span>4.0</span>vs Banfield <span>3.0</span></td>
+                <td id="3er-Partido">Lanus <span>4.0</span>vs Banfield <span>3.0</span></td>
             </tr>
             <tr>
-                <td>Colon <span>4.0</span>vs Union <span>3.0</span></td>
+                <td id="4to-Partido">Colon <span>4.0</span>vs Union <span>3.0</span></td>
             </tr>
             <tr>
-                <td>Gimnasia <span>4.0</span>vs Estudiantes <span>1.5</span></td>
+                <td id="5to-Partido">Gimnasia <span>4.0</span>vs Estudiantes <span>1.5</span></td>
             </tr>
             <tr>
-                <td>
+                <td id="6to-Partido">
                     Central C. <span>2.0</span>vs Crucero N. <span>7.0</span>
                 </td>
             </tr>
             <tr>
-                <td>San Lorenzo <span>2.0</span>vs Huracan <span>3.0</span></td>
+                <td id="7to-Partido">San Lorenzo <span>2.0</span>vs Huracan <span>3.0</span></td>
             </tr>
             <tr>
-                <td>Racing <span>2.0</span> vs Independiente <span>1.3</span></td>
+                <td id="8vo-Partido">Racing <span>2.0</span> vs Independiente <span>1.3</span></td>
             </tr>
             <tr>
-                <td>
+                <td id="9no-Partido">
                     Newells <span>3.0</span> vs Rosario Central <span>2.0</span>
                 </td>
             </tr>
@@ -725,6 +727,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
         <script src="./js/main.js"></script>
 </body>
 
