--- a/pages/casino.html
+++ b/pages/casino.html
@@ -96,12 +96,12 @@
                         <a href="#">
                             <img class="Img-Casino" src="../imagenes/Poker.jpg" alt="Poker">
                         </a>
-                        <button id="btnPrincipal">Ver mas</button>
+                        <button id="Button">Ver mas</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="Mas-Populares">
+        <div class="En-Vivo">
             <div data-aos="zoom-out-down">
                 <div class="container-fluid">
                     <div class="row">
@@ -119,13 +119,13 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                             <img class="Img-Casino" src="../imagenes/card.jpg" alt="Mas-Populares">
-                            <button class="Button">Ver mas</button>
+                            <button id="Button">Ver mas</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="BlackJack">
+        <div class="En-Vivo">
             <div data-aos="zoom-out-down">
                 <div class="container-fluid">
                     <div class="row">
@@ -142,12 +142,12 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                             <img class="Img-Casino" src="../imagenes/Tri-card-poker-kebab-case.jpg" alt="BlackJack">
-                            <button class="Button">Ver mas</button>
+                            <button id="Button">Ver mas</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="Jacktops">
+            <div class="En-Vivo">
                 <div data-aos="zoom-out-down">
                     <div class="container-fluid">
                         <div class="row">
@@ -164,7 +164,7 @@
                             </div>
                             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                                 <img class="Img-Casino" src="../imagenes/Year.jpeg" alt="Top-Jacktops">
-                                <button class="Button">Ver mas</button>
+                                <button id="Button">Ver mas</button>
                             </div>
                         </div>
                     </div>
