--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -77,7 +77,37 @@
                                 Revisa el historial <br>frente a Belgrano y aposta por quien <br>crees que
                                 sera el ganador!</span>
                         </p>
-                        <a href="#" class="btn btn-primary">Ver Mas</a>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop">
+                            Ver Mas
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                            tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="staticBackdropLabel">River vs Belgrano</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Para este partido, River juega de local, frente a su hinchada <br> y segun las
+                                        estadisticas, River tiene un historial amplio contra Belgrano,
+                                        ganando los ultimos 5 partidos disputados.
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Cerrar</button>
+                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Gracias
+                                            por la
+                                            informacion</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,45 +123,45 @@
                                 mas.</span>
                         </p>
                         <a href="#" class="btn btn-primary">Ver Mas</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                <div class="card">
-                    <img src="../imagenes/F1.jpg" class="img-fluid" alt="F1" />
-                    <div class="card-body">
-                        <h3 class="card-title">Toda la Informacion de la Formula 1</h3>
-                        <p class="card-text">
-                            <span>Twenty-one te trae todas las estadisticas <br> sobre la Formula 1, ultimos
-                                ganadores
-                                <br>vueltas mas rapidas, mejores timepos y mucho mas!<br> Nunca apostar fue tan
-                                facil y
-                                divertido!
-                            </span>
-                        </p>
-                        <a href="#" class="btn btn-primary">Ver Mas</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                <div class="card">
-                    <img src="../imagenes/barcelona-vs-real-madrid-prediction-kebab-case.jpg" class="img-fluid"
-                        alt="Basquetball">
-                    <div class="card-body">
-                        <h3 class="card-title">Liga de España⚽️</h3>
-                        <p class="card-text">
-                            <span>Segui de cerca toda la informacion del clasico para este domingo<br> entre
-                                Barcelona y
-                                Real Madrid. Mira quienes fueron los ultimos<br> anotadores, asistidores, corners y
-                                crea <br>la mejor
-                                apuesta.
-                            </span>
-                        </p>
-                        <a href="#" class="btn btn-primary">Ver Mas</a>
-                    </div>
-                </div>
             </div>
         </div>
+    </div>
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <div class="card">
+            <img src="../imagenes/F1.jpg" class="img-fluid" alt="F1" />
+            <div class="card-body">
+                <h3 class="card-title">Toda la Informacion de la Formula 1</h3>
+                <p class="card-text">
+                    <span>Twenty-one te trae todas las estadisticas <br> sobre la Formula 1, ultimos
+                        ganadores
+                        <br>vueltas mas rapidas, mejores timepos y mucho mas!<br> Nunca apostar fue tan
+                        facil y
+                        divertido!
+                    </span>
+                </p>
+                <a href="#" class="btn btn-primary">Ver Mas</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <div class="card">
+            <img src="../imagenes/barcelona-vs-real-madrid-prediction-kebab-case.jpg" class="img-fluid"
+                alt="Basquetball">
+            <div class="card-body">
+                <h3 class="card-title">Liga de España⚽️</h3>
+                <p class="card-text">
+                    <span>Segui de cerca toda la informacion del clasico para este domingo<br> entre
+                        Barcelona y
+                        Real Madrid. Mira quienes fueron los ultimos<br> anotadores, asistidores, corners y
+                        crea <br>la mejor
+                        apuesta.
+                    </span>
+                </p>
+                <a href="#" class="btn btn-primary">Ver Mas</a>
+            </div>
+        </div>
+    </div>
+    </div>
     </div>
     </section>
     <!--Fin de Grid con 4 imagenes-->
@@ -193,7 +223,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-        
+
 
 </body>
 
