--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -65,6 +65,7 @@
     </header>
     <!--Inicio de Formularios-->
     <!--Fila DE informacion de mi sitio-->
+    <form id="Formulario">
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -146,6 +147,7 @@
                     </div>
                 </div>
             </div>
+        </form>
             <!--Fin del form-->
             <div class="container-fluid">
                 <div class="row">
@@ -169,7 +171,7 @@
                     </div>
                 </div>
             </div>
-            
+
 
 
 
@@ -272,8 +274,9 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
                 crossorigin="anonymous"></script>
-                <script src="../js/main.js"></script>  
-                
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                <script src="../js/main.js"></script>
+
 </body>
 
 </html>
