Preparando 3era Entrega

--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -130,7 +130,8 @@
             </div>
             <div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <button id="Button" type="submit" class="btn btn-primary">Click</button>
+                    
                 </div>
             </div>
             </form>
