Agregando para 3er entrega

--- a/pages/deportes.html
+++ b/pages/deportes.html
@@ -117,7 +117,8 @@
             </div>
         </div>
     </header>
-
+    <a href="./carrito.html">
+    <button type="button" class="btn btn-outline-danger">Apuestas en Vivo</button></a>
     <div class="contenedor-Deportes">
         <div class="container-fluid">
             <div class="row">
