--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -64,7 +64,7 @@
     </nav>
 
     <header class="Header-Info">
-        <h1>En vivo</h1>
+        <h1>Lo que se viene</h1>
     </header>
     <!--Inicio del Grid con 4 imagenes-->
     </section>
